madox_ws/log/build_2021-04-28_00-09-38/py_drive/stderr.log
  File "/home/robot/Software/ROS2/Scrap/scrap_ws/install/py_drive/lib/python3.8/site-packages/py_drive/subscriber_member_function.py", line 30
    nonlocal kit
    ^
SyntaxError: no binding for nonlocal 'kit' found

